﻿EQExtractor2 Changelog. All changes since the 1.0 release.

==05/16/2011==
Derision: Fixed DumpAA option for May 12 client. There are two new uint32s in the SendAATable struct, one after Current Level and one after SpellType.
==05/15/2011==
Derision: Support for May 12 2011 client. Based on info by posters on the ShowEQ forums.

==03/21/2011==
Derision: Support for March 15 2011 client

==02/10/2011==
Derision: Support for Feb 8 2011 client
Derision: Corrected Identifier for Feb 8 2011 patch
Derision: Corrected OP_SendAATable for Feb 8 2011 patch

==01/29/2011==
Derision: Doors with opentype 57 are no longer automatically changed to type 58.
Derision: Handling of opcodes with zero low-byte (e.g. 0x4200).
Derision: Band-aid for crash when parsing OP_ZoneEntry for player with Otherdata & 0x01 set.

==12/25/2010==
Derision: Heading appears to be multiplied by 2 in ZonePoint packets.

==12/21/2010==
Derision: OP_SendFindableNPCS

==12/08/2010==
Derision: Added support for client Dec  7 2010 14:04:53

==11/22/2010==
Derision: Netcode fix highlighted by live patch supplied by robregen.
Derision: Handled spawns with otherdata & 2 set the same as otherdata & 1 (destructable object data present), based on live patch supplied
		  by robregen.

==10/23/2010==
Derision: Support for 20th October Live patch.

==09/23/2010==
Derision: Support for 22nd September Test Server client. Don't think I have OP_ShopEnd correct.

==09/17/2010==
Derision: Passed packet direction to Explorers.

==09/11/2010==
Derision: Identified a few more 'Area' IDs for the new Item slot numbering system.
Derision: Explorer methods are now called with the packet payload as a ByteStream rather than byte[]

==09/10/2010==
Derision: Addded ability to call 'Explorer' methods during Packet Dump for use while figuring out packet formats.

==09/08/2010==
Derision: Moved item packet decode into a separate method.

==09/03/2010==