@@ -1,7 +1,11 @@
 ﻿EQExtractor2 Changelog. All changes since the 1.0 release.
 
+==05/25/2011==
+Derision: Support for May 24 2011 client.
+
 ==05/16/2011==
 Derision: Fixed DumpAA option for May 12 client. There are two new uint32s in the SendAATable struct, one after Current Level and one after SpellType.
+
 ==05/15/2011==
 Derision: Support for May 12 2011 client. Based on info by posters on the ShowEQ forums.
 
